# feathermark

./: .gitignore  CLAUDE.md  README.md  README_CN.md  test_math.md
mdreader/: CHANGELOG.md  README.md  SVG_RENDERING_NOTES.md  jsconfig.json  package-lock.json  package.json
mdreader/sample/: basic.md  smoke-test.md  with-katex.md  with-svg.md
mdreader/src/: app.html  global.d.ts
mdreader/src-tauri/: Cargo.toml  tauri.conf.json
mdreader/src-tauri/capabilities/: default.json
mdreader/src-tauri/icons/: icon.icns
mdreader/src-tauri/src/: lib.rs  main.rs
mdreader/src/lib/components/: App.svelte  MarkdownView.svelte  SettingsModal.svelte  Sidebar.svelte  TabBar.svelte
mdreader/src/lib/parser/: markdown.js
mdreader/src/lib/renderer/: assets.js  embed.js  katex.js  mermaid.js  sanitize.js
mdreader/src/lib/services/: file.js
mdreader/src/lib/stores/: document.js  tabs.js
mdreader/src/routes/: +page.svelte
sample/: obsidian-sample.md  with-mermaid.md
