[package]
name = "mdreader"
version = "0.1.5"
description = "A lightweight Markdown reader with Obsidian-compatible syntax support"
authors = ["RRokos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdreader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
log = "0.4"
notify = "7"
urlencoding = "2"

